fhir/10.0.0/OperationDefinition--s-fetch-patient-total.md
# Fetch patient total - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* [**Artifacts Summary**](artifacts.md)
* **Fetch patient total**

## OperationDefinition: Fetch patient total 

| | |
| :--- | :--- |
| *Official URL*:http://ehealth.sundhed.dk/fhir/OperationDefinition/-s-fetch-patient-total | *Version*:10.0.0 |
| Active as of 2026-08-06 | *Computable Name*:fetch-patient-total |

 

### Report Contents

 
This report contains clinical information for each Patient 

### Grouping

 
This report is grouped by EpsiodeOfCare. Each group is returned in a separate JSon file. 

### Parameters

 
* organization: Filter on EpisodeOfCare.managingOrganization match
* period: Filter on EpisodeOfCare.period overlap
* conditionCode: Filter on Condition.code related to EpisodeOfCare
* Output can be found in Binary.content. This is a Base64 encoded .zip file containing JSon files corresponding to the report groups.


  All returned objects are Fhir resources. See the implementation guide for details


  { 'Patient': { 'resourceType': 'Patient', 'id': '70791', 'meta': { 'versionId': '1' } }, 'EHealthEpisodeOfCare': [{ 'resourceType': 'EpisodeOfCare', 'id': '10928', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare-caremanagerOrganization', 'valueReference': { 'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/43014' } } ], 'status': 'active', 'diagnosis': [{ 'condition': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/33654' }, 'rank': 1 } ], 'patient': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/70791' }, 'managingOrganization': { 'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/34361' }, 'period': { 'start': '1970-01-01T01:00:01+01:00', 'end': '1970-01-01T01:01:40+01:00' } }, { 'resourceType': 'EpisodeOfCare', 'id': '48392', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare-caremanagerOrganization', 'valueReference': { 'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/41282' } } ], 'status': 'active', 'diagnosis': [{ 'condition': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/87020' }, 'rank': 1 } ], 'patient': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/47956' }, 'managingOrganization': { 'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/34361' }, 'period': { 'start': '1970-01-01T01:00:01+01:00', 'end': '1970-01-01T01:01:40+01:00' } } ], 'EHealthDeviceUseStatement': [{ 'resourceType': 'DeviceUseStatement', 'id': '4021', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement-context', 'valueReference': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/CarePlan/87235' } } ], 'status': 'active', 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/69099' }, 'device': { 'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729' } }, { 'resourceType': 'DeviceUseStatement', 'id': '5732', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement-context', 'valueReference': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/CarePlan/23385' } } ], 'status': 'active', 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/10543' }, 'device': { 'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/91432' } } ], 'EHealthDevice': [{ 'resourceType': 'Device', 'id': '81729', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device-privatelyOwned', 'valueBoolean': true } ], 'status': 'active' }, { 'resourceType': 'Device', 'id': '91432', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device-privatelyOwned', 'valueBoolean': true } ], 'status': 'active' } ], 'EHealthDeviceMetric': [{ 'resourceType': 'DeviceMetric', 'id': '35094', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-qualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 5 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 10 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 12 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 14 } ] } ], 'identifier': { 'value': 'Foo' }, 'type': { 'text': 'code' }, 'source': { 'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729' }, 'category': 'calculation' }, { 'resourceType': 'DeviceMetric', 'id': '22449', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-qualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 5 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 10 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 12 } ] }, { 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities', 'extension': [{ 'url': 'category', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types', 'code': 'initial' } ] } }, { 'url': 'value', 'valueInteger': 14 } ] } ], 'identifier': { 'value': 'Foo' }, 'type': { 'text': 'code' }, 'source': { 'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729' }, 'category': 'calculation' } ], 'EHealthConsent': [{ 'resourceType': 'Consent', 'id': '51690', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-consent'] }, 'status': 'active', 'category': [{ 'coding': [{ 'code': 'TBD' } ] } ], 'patient': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/70791' }, 'period': { 'start': '1970-01-01T01:00:01+01:00', 'end': '1970-01-01T01:01:40+01:00' }, 'consentingParty': [{ 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/41034' } ], 'actor': [{ 'id': 'f31bec27-965f-49ea-b8fe-5fdb259c539d', 'role': { 'coding': [{ 'code': 'authserver' } ] }, 'reference': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/60499' } } ], 'policyRule': 'Rule', 'data': [{ 'meaning': 'related', 'reference': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/51427' } } ] } ], 'EHealthCarePlan': [{ 'resourceType': 'CarePlan', 'id': '87235', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan'] }, 'definition': [{ 'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/PlanDefinition/98996' } ], 'status': 'draft', 'intent': 'option', 'category': [{ 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/careplan-category', 'code': 'TBD' } ] } ], 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/55953' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' }, 'period': { 'start': '1970-01-01T01:00:01+01:00', 'end': '1970-01-01T01:01:40+01:00' }, 'addresses': [{ 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/25664' } ] }, { 'resourceType': 'CarePlan', 'id': '23385', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan'] }, 'definition': [{ 'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/PlanDefinition/83648' } ], 'status': 'draft', 'intent': 'option', 'category': [{ 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/careplan-category', 'code': 'TBD' } ] } ], 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/51258' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/48392' }, 'period': { 'start': '1970-01-01T01:00:01+01:00', 'end': '1970-01-01T01:01:40+01:00' }, 'addresses': [{ 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/4845' } ] } ], 'EHealthServiceRequest': [{ 'resourceType': 'ServiceRequest', 'id': '18904', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-servicerequest'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-sharingPolicy', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/measurement-sharing-policies', 'code': 'TBD' } ] } } ], 'definition': [{ 'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/ActivityDefinition/64273' } ], 'status': 'completed', 'intent': 'filler-order', 'code': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/activitydefinition-code', 'code': 'TBD' } ], 'text': '7654414a-7f86-4170-9920-fde60368b58b' }, 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/59415' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' } } ], 'EHealthCondition': [{ 'resourceType': 'Condition', 'id': '22743', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-condition'] }, 'clinicalStatus': 'active', 'code': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/conditions', 'code': 'TBD' } ] }, 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/84730' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' } } ], 'EHealthObservation': [{ 'resourceType': 'Observation', 'id': '55832', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-observation'] }, 'basedOn': [{ 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/69506' } ], 'status': 'amended', 'code': { 'coding': [{ 'system': 'urn:oid:1.2.208.176.2.1', 'code': 'NPU03011' } ] }, 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/96798' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' }, 'effectivePeriod': { 'start': '2020-03-26T13:37:40+01:00', 'end': '2020-03-26T13:37:40+01:00' }, 'performer': [{ 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/43621' } ], 'device': { 'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/30416' } } ], 'EHealthQuestionnaireResponse': [{ 'resourceType': 'QuestionnaireResponse', 'id': '21957', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-questionnaireresponse'] }, 'basedOn': [{ 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/12403' } ], 'questionnaire': { 'reference': 'https://questionnaire.local.ehealth.sundhed.dk/fhir/Questionnaire/42078' }, 'status': 'completed', 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/47155' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' }, 'authored': '2020-03-26T13:37:40+01:00', 'source': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/61666' } } ], 'EHealthMedia': [{ 'resourceType': 'Media', 'id': '18256', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-media'] }, 'extension': [{ 'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-quality', 'extension': [{ 'url': 'qualityType', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/quality-types', 'code': 'TBD' } ] } }, { 'url': 'qualityCode', 'valueCodeableConcept': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/usage-quality', 'code': 'TBD' } ] } } ] } ], 'basedOn': [{ 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/98474' } ], 'type': 'audio', 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/20886' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' }, 'occurrenceDateTime': '2020-03-26T13:37:40+01:00', 'content': { 'language': 'en' } } ], 'EHealthClinicalImpression': [{ 'resourceType': 'ClinicalImpression', 'id': '39697', 'meta': { 'versionId': '1', 'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-clinicalimpression'] }, 'status': 'draft', 'code': { 'coding': [{ 'system': 'http://ehealth.sundhed.dk/cs/clinicalimpression-codes', 'code': 'TBD' } ] }, 'subject': { 'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/32140' }, 'context': { 'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928' } } ] }
 



## Resource Content

```json
{
  "resourceType" : "OperationDefinition",
  "id" : "-s-fetch-patient-total",
  "url" : "http://ehealth.sundhed.dk/fhir/OperationDefinition/-s-fetch-patient-total",
  "version" : "10.0.0",
  "name" : "fetch-patient-total",
  "title" : "Fetch patient total",
  "status" : "active",
  "kind" : "operation",
  "date" : "2026-08-06T13:17:54+00:00",
  "publisher" : "Den telemedicinske infrastruktur (eHealth Infrastructure)",
  "contact" : [{
    "name" : "Den telemedicinske infrastruktur (eHealth Infrastructure)",
    "telecom" : [{
      "system" : "url",
      "value" : "http://ehealth.sundhed.dk"
    }]
  }],
  "description" : "### Report Contents\nThis report contains clinical information for each Patient\n### Grouping \nThis report is grouped by EpsiodeOfCare. Each group is returned in a separate JSon file.\n### Parameters\n- organization: Filter on EpisodeOfCare.managingOrganization match\n- period: Filter on EpisodeOfCare.period overlap\n- conditionCode: Filter on Condition.code related to EpisodeOfCare\n- status: Filter on EpisodeOfCare.status\n### Output\nOutput can be found in Binary.content. This is a Base64 encoded .zip file containing JSon files corresponding to the report groups.\n### Example output\nAll returned objects are Fhir resources. See the implementation guide for details\n\n    {\n        'Patient': {\n            'resourceType': 'Patient',\n            'id': '70791',\n            'meta': {\n                'versionId': '1'\n            }\n        },\n        'EHealthEpisodeOfCare': [{\n                'resourceType': 'EpisodeOfCare',\n                'id': '10928',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare-caremanagerOrganization',\n                        'valueReference': {\n                            'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/43014'\n                        }\n                    }\n                ],\n                'status': 'active',\n                'diagnosis': [{\n                        'condition': {\n                            'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/33654'\n                        },\n                        'rank': 1\n                    }\n                ],\n                'patient': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/70791'\n                },\n                'managingOrganization': {\n                    'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/34361'\n                },\n                'period': {\n                    'start': '1970-01-01T01:00:01+01:00',\n                    'end': '1970-01-01T01:01:40+01:00'\n                }\n            }, {\n                'resourceType': 'EpisodeOfCare',\n                'id': '48392',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-episodeofcare-caremanagerOrganization',\n                        'valueReference': {\n                            'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/41282'\n                        }\n                    }\n                ],\n                'status': 'active',\n                'diagnosis': [{\n                        'condition': {\n                            'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/87020'\n                        },\n                        'rank': 1\n                    }\n                ],\n                'patient': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/47956'\n                },\n                'managingOrganization': {\n                    'reference': 'https://organization.local.ehealth.sundhed.dk/fhir/Organization/34361'\n                },\n                'period': {\n                    'start': '1970-01-01T01:00:01+01:00',\n                    'end': '1970-01-01T01:01:40+01:00'\n                }\n            }\n        ],\n        'EHealthDeviceUseStatement': [{\n                'resourceType': 'DeviceUseStatement',\n                'id': '4021',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement-context',\n                        'valueReference': {\n                            'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/CarePlan/87235'\n                        }\n                    }\n                ],\n                'status': 'active',\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/69099'\n                },\n                'device': {\n                    'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729'\n                }\n            }, {\n                'resourceType': 'DeviceUseStatement',\n                'id': '5732',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-deviceusestatement-context',\n                        'valueReference': {\n                            'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/CarePlan/23385'\n                        }\n                    }\n                ],\n                'status': 'active',\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/10543'\n                },\n                'device': {\n                    'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/91432'\n                }\n            }\n        ],\n        'EHealthDevice': [{\n                'resourceType': 'Device',\n                'id': '81729',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device-privatelyOwned',\n                        'valueBoolean': true\n                    }\n                ],\n                'status': 'active'\n            }, {\n                'resourceType': 'Device',\n                'id': '91432',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-device-privatelyOwned',\n                        'valueBoolean': true\n                    }\n                ],\n                'status': 'active'\n            }\n        ],\n        'EHealthDeviceMetric': [{\n                'resourceType': 'DeviceMetric',\n                'id': '35094',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-qualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 5\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 10\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 12\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 14\n                            }\n                        ]\n                    }\n                ],\n                'identifier': {\n                    'value': 'Foo'\n                },\n                'type': {\n                    'text': 'code'\n                },\n                'source': {\n                    'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729'\n                },\n                'category': 'calculation'\n            }, {\n                'resourceType': 'DeviceMetric',\n                'id': '22449',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-qualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 5\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 10\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 12\n                            }\n                        ]\n                    }, {\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-devicemetric-templateQualities',\n                        'extension': [{\n                                'url': 'category',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/devicemetric-quality-types',\n                                            'code': 'initial'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'value',\n                                'valueInteger': 14\n                            }\n                        ]\n                    }\n                ],\n                'identifier': {\n                    'value': 'Foo'\n                },\n                'type': {\n                    'text': 'code'\n                },\n                'source': {\n                    'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/81729'\n                },\n                'category': 'calculation'\n            }\n        ],\n        'EHealthConsent': [{\n                'resourceType': 'Consent',\n                'id': '51690',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-consent']\n                },\n                'status': 'active',\n                'category': [{\n                        'coding': [{\n                                'code': 'TBD'\n                            }\n                        ]\n                    }\n                ],\n                'patient': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/70791'\n                },\n                'period': {\n                    'start': '1970-01-01T01:00:01+01:00',\n                    'end': '1970-01-01T01:01:40+01:00'\n                },\n                'consentingParty': [{\n                        'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/41034'\n                    }\n                ],\n                'actor': [{\n                        'id': 'f31bec27-965f-49ea-b8fe-5fdb259c539d',\n                        'role': {\n                            'coding': [{\n                                    'code': 'authserver'\n                                }\n                            ]\n                        },\n                        'reference': {\n                            'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/60499'\n                        }\n                    }\n                ],\n                'policyRule': 'Rule',\n                'data': [{\n                        'meaning': 'related',\n                        'reference': {\n                            'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/51427'\n                        }\n                    }\n                ]\n            }\n        ],\n        'EHealthCarePlan': [{\n                'resourceType': 'CarePlan',\n                'id': '87235',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan']\n                },\n                'definition': [{\n                        'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/PlanDefinition/98996'\n                    }\n                ],\n                'status': 'draft',\n                'intent': 'option',\n                'category': [{\n                        'coding': [{\n                                'system': 'http://ehealth.sundhed.dk/cs/careplan-category',\n                                'code': 'TBD'\n                            }\n                        ]\n                    }\n                ],\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/55953'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                },\n                'period': {\n                    'start': '1970-01-01T01:00:01+01:00',\n                    'end': '1970-01-01T01:01:40+01:00'\n                },\n                'addresses': [{\n                        'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/25664'\n                    }\n                ]\n            }, {\n                'resourceType': 'CarePlan',\n                'id': '23385',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan']\n                },\n                'definition': [{\n                        'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/PlanDefinition/83648'\n                    }\n                ],\n                'status': 'draft',\n                'intent': 'option',\n                'category': [{\n                        'coding': [{\n                                'system': 'http://ehealth.sundhed.dk/cs/careplan-category',\n                                'code': 'TBD'\n                            }\n                        ]\n                    }\n                ],\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/51258'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/48392'\n                },\n                'period': {\n                    'start': '1970-01-01T01:00:01+01:00',\n                    'end': '1970-01-01T01:01:40+01:00'\n                },\n                'addresses': [{\n                        'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/Condition/4845'\n                    }\n                ]\n            }\n        ],\n        'EHealthServiceRequest': [{\n                'resourceType': 'ServiceRequest',\n                'id': '18904',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-servicerequest']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-sharingPolicy',\n                        'valueCodeableConcept': {\n                            'coding': [{\n                                    'system': 'http://ehealth.sundhed.dk/cs/measurement-sharing-policies',\n                                    'code': 'TBD'\n                                }\n                            ]\n                        }\n                    }\n                ],\n                'definition': [{\n                        'reference': 'https://plan.local.ehealth.sundhed.dk/fhir/ActivityDefinition/64273'\n                    }\n                ],\n                'status': 'completed',\n                'intent': 'filler-order',\n                'code': {\n                    'coding': [{\n                            'system': 'http://ehealth.sundhed.dk/cs/activitydefinition-code',\n                            'code': 'TBD'\n                        }\n                    ],\n                    'text': '7654414a-7f86-4170-9920-fde60368b58b'\n                },\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/59415'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                }\n            }\n        ],\n        'EHealthCondition': [{\n                'resourceType': 'Condition',\n                'id': '22743',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-condition']\n                },\n                'clinicalStatus': 'active',\n                'code': {\n                    'coding': [{\n                            'system': 'http://ehealth.sundhed.dk/cs/conditions',\n                            'code': 'TBD'\n                        }\n                    ]\n                },\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/84730'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                }\n            }\n        ],\n        'EHealthObservation': [{\n                'resourceType': 'Observation',\n                'id': '55832',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-observation']\n                },\n                'basedOn': [{\n                        'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/69506'\n                    }\n                ],\n                'status': 'amended',\n                'code': {\n                    'coding': [{\n                            'system': 'urn:oid:1.2.208.176.2.1',\n                            'code': 'NPU03011'\n                        }\n                    ]\n                },\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/96798'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                },\n                'effectivePeriod': {\n                    'start': '2020-03-26T13:37:40+01:00',\n                    'end': '2020-03-26T13:37:40+01:00'\n                },\n                'performer': [{\n                        'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/43621'\n                    }\n                ],\n                'device': {\n                    'reference': 'https://device.local.ehealth.sundhed.dk/fhir/Device/30416'\n                }\n            }\n        ],\n        'EHealthQuestionnaireResponse': [{\n                'resourceType': 'QuestionnaireResponse',\n                'id': '21957',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-questionnaireresponse']\n                },\n                'basedOn': [{\n                        'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/12403'\n                    }\n                ],\n                'questionnaire': {\n                    'reference': 'https://questionnaire.local.ehealth.sundhed.dk/fhir/Questionnaire/42078'\n                },\n                'status': 'completed',\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/47155'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                },\n                'authored': '2020-03-26T13:37:40+01:00',\n                'source': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/61666'\n                }\n            }\n        ],\n        'EHealthMedia': [{\n                'resourceType': 'Media',\n                'id': '18256',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-media']\n                },\n                'extension': [{\n                        'url': 'http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-quality',\n                        'extension': [{\n                                'url': 'qualityType',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/quality-types',\n                                            'code': 'TBD'\n                                        }\n                                    ]\n                                }\n                            }, {\n                                'url': 'qualityCode',\n                                'valueCodeableConcept': {\n                                    'coding': [{\n                                            'system': 'http://ehealth.sundhed.dk/cs/usage-quality',\n                                            'code': 'TBD'\n                                        }\n                                    ]\n                                }\n                            }\n                        ]\n                    }\n                ],\n                'basedOn': [{\n                        'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/ServiceRequest/98474'\n                    }\n                ],\n                'type': 'audio',\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/20886'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                },\n                'occurrenceDateTime': '2020-03-26T13:37:40+01:00',\n                'content': {\n                    'language': 'en'\n                }\n            }\n        ],\n        'EHealthClinicalImpression': [{\n                'resourceType': 'ClinicalImpression',\n                'id': '39697',\n                'meta': {\n                    'versionId': '1',\n                    'profile': ['http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-clinicalimpression']\n                },\n                'status': 'draft',\n                'code': {\n                    'coding': [{\n                            'system': 'http://ehealth.sundhed.dk/cs/clinicalimpression-codes',\n                            'code': 'TBD'\n                        }\n                    ]\n                },\n                'subject': {\n                    'reference': 'https://patient.local.ehealth.sundhed.dk/fhir/Patient/32140'\n                },\n                'context': {\n                    'reference': 'https://careplan.local.ehealth.sundhed.dk/fhir/EpisodeOfCare/10928'\n                }\n            }\n        ]\n    }\n",
  "jurisdiction" : [{
    "coding" : [{
      "system" : "urn:iso:std:iso:3166",
      "code" : "DK",
      "display" : "Denmark"
    }]
  }],
  "affectsState" : true,
  "code" : "fetch-patient-total",
  "system" : true,
  "type" : false,
  "instance" : false,
  "parameter" : [{
    "name" : "anonymization",
    "use" : "in",
    "min" : 1,
    "max" : "1",
    "documentation" : "This parameter is used to control if the report should be anonymized or not. If the value is set to NONE (no anonymization) and the user lacks the required permission, an exception is thrown.",
    "type" : "string"
  },
  {
    "name" : "organization",
    "use" : "in",
    "min" : 0,
    "max" : "1",
    "documentation" : "Filter on EpisodeOfCare.managingOrganization match.",
    "type" : "Reference"
  },
  {
    "name" : "period",
    "use" : "in",
    "min" : 0,
    "max" : "1",
    "documentation" : "Filter on EpisodeOfCare.period overlap.",
    "type" : "Period"
  },
  {
    "name" : "conditionCode",
    "use" : "in",
    "min" : 0,
    "max" : "1",
    "documentation" : "Filter on Condition.code related to EpisodeOfCare.",
    "type" : "Coding"
  },
  {
    "name" : "status",
    "use" : "in",
    "min" : 0,
    "max" : "1",
    "documentation" : "Filter on EpisodeOfCare.status.",
    "type" : "string"
  },
  {
    "name" : "return",
    "use" : "out",
    "min" : 0,
    "max" : "1",
    "type" : "Binary"
  }]
}

```
